Closed Bug 11980 Opened 25 years ago Closed 25 years ago

Crash after entering bogus Pop password

Categories

(MailNews Core :: Backend, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: davidm, Assigned: mscott)

Details

Select get mail
Enter a wrong password
hit ok
After getting pop error -311 machine locks up
Severity: normal → critical
QA Contact: lchiang → esther
Is this seen on Mac only?
Status: NEW → ASSIGNED
Hardware: Macintosh → All
Target Milestone: M10
No, all platforms. I'm correcting the designation and assigning to M10.
I have a fix for this in my tree I'll check in today if the tree opens.
OS: Mac System 8.5 → All
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
I've checked in the fix for this.

To test, hit get new mail for pop. When you are prompted for your password, type
in an incorrect password. You should be prompted for your password again after
we determine that it is incorrect. Enter the correct password and verify that
new mail is retrieved.

This bug is for pop only. We should check imap to see how imap does under this
scenario. bienvenu added the password dialog to imap yesterday. You need to
deleter your imap password pref from prefs.js in order to get the dialog to come
up under imap.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Reopening.
Using 1999082016 build on Win98 apprunner locks up with a bogus password.
I tried this with a single pop account and multiple pop accounts.  Have to try
Mac and Linux when available.

same steps as above, Messenger is not useable.  When I open the apprunner
console to see what's going on it's stuck here:

mailbox://qatest04@nsmail-2/inbox
nsToolbarDragListener::MouseUp
onUpate
Enter your password for qatest04@nsmail-2.
 setting message
Document: Done (3.4 secs)
[flashing cursor on this line]

When I go back to Messenger, it's completely blank and I can't close it.
Status: REOPENED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Resolving as fixed again, sorry we are still using/trying to passing M9, this
bug was fixed in M10.  Will verify with M10 builds when we're done with M9.
Using 1999090109 on win98 this is fixed.  Still trying to install on mac and
linux, still need to verify on those platforms and update.
Status: RESOLVED → VERIFIED
Using 1999090109 M10 on win and 1999090108 on Mac and Linux, this bug as
originally stated is fixed.  POP works correctly IMAP has a problem.  A new bug
has been logged for IMAP (13029 "Login Failed" dialog comes up after an
incorrect password has been entered).   I will verify this one.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.