Bug #11980 --> fix a crash after entering a bogus password for pop.